fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html{
 }
 body{
   margin: 0px;
-
+  overflow: hidden;
   font-size: 18px;
 }
 body {
